<resources>
    <string name="app_name">Any.do</string>
    <string name="add_newnote_fab">add new notes\n</string>
    <string name="title_edittext_hint">Title…</string>
    <string name="subtitle_editext_hint">Subtitle…</string>
    <string name="notes_edittext">Notes</string>
    <string name="priority_textview">Priority</string>
    <string name="save_new_note">Save new note</string>
    <string name="update_notes_button_description">Update notes</string>
    <string name="notes_entry_text">Write your notes here</string>
    <string name="title_textview">Title</string>
    <string name="subtitle_textview">subtitle</string>
    <string name="date_textview">9 nov 2021</string>
    <string name="green_priority_image_contntdiscripption">Green priority image</string>
    <string name="yellow_priority_image_contentDescription">yellow priority image</string>
    <string name="red_priority_image_contentDiscription">red priority image</string>
    <string name="search_notes_text">Search</string>
</resources>