<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:orientation="vertical"
    tools:context=".Activity.UpdateNotesActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/update_title_edittext"
            style="@style/general_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_edittext_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/update_subtitle_edittext"
            style="@style/general_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subtitle_editext_hint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priority_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/priority_textview"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/update_green_priority"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/green_shape"/>

            <ImageView
                android:id="@+id/update_yellow_priority"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/yellow_shape" />
            <ImageView
                android:id="@+id/update_red_priority"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/red_shape" />
        </LinearLayout>

        <EditText
            android:id="@+id/update_notes_data_editText"
            style="@style/general_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="376dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="text"
            android:text="@string/notes_edittext"
            android:textAlignment="gravity" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_update_notes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/update_notes_button_description"
        app:backgroundTint="@color/red"
        app:srcCompat="@drawable/baseline_done_24" />




</RelativeLayout>