<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="9dp">

        <View
            android:id="@+id/notesPriority"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:background="@drawable/green_shape"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/notesTitle"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_textview"
                android:layout_margin="5dp"
                android:fontFamily="@font/product_sans_regular"/>

            <TextView
                android:id="@+id/notessubTitle"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_textview"
                android:layout_margin="5dp"
                android:fontFamily="@font/product_sans_regular"/>

            <TextView
                android:id="@+id/notesDate"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_textview"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:fontFamily="@font/product_sans_bold"/>
         </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>